# trendmarket

./: .commit_sha.txt  .env  .env.otel  .env.telemetry  .gitattributes  .gitignore  A110_patch_e03d262.patch  Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  Cargo.toml.bak.otelpin  amm_error.schema.json  crd-7-10-artifacts.tgz  crd-7-10.patch  crd-7-11-artifacts.tgz  crd-7-11.patch  crd-7-12-artifacts.tgz  crd-7-12.patch  docker-compose.bridge.yml  docker-compose.observability.yml  otel-collector.yaml  otelcol-contrib  otelcol-contrib.tgz  otelcol.yaml  prometheus.yml  sync_core_to_trendmarket.sh
_jira_out/: 0001-chore-obs-local-OTLP-HTTP-root-bridge-nginx-4319.patch  README_Q1.md
artifacts/: a110-summary.json  a110-summary.md  exitcodes.env  junit.xml  summary.json  summary.md  test-results.txt
backup_telemetry/: obs_demo.rs.1758087318  telemetry.rs.1758087318
benches/: bench_liquidity.rs  bench_swap.rs
docker/: docker-compose.yml  prometheus.yml
docs/: a110-branch-protection.md  amm-error-catalog.md  amm-error-playbook.md  rollback-a110.md
goldens/: README_golden.md  amm_cpmw_v1.csv  amm_cpmw_v1.csv.sha256
schemas/: amm_error.schema.json
scripts/: a110_add_badge.sh  a110_gate.py  a110_run_invariants.sh  bench_report.py  ci_synth.sh  compose_hard_reset.sh  compose_hard_reset_v3.sh  compose_hard_reset_v4.sh  compose_repair_strict.sh  compose_repair_strict_v2.sh  compose_write_strict_v3.sh  compose_write_strict_v4.sh  compose_write_strict_v5.sh  dev_doctor.sh  dev_stack_down.sh  dev_stack_up.sh  ensure_num_deps.sh  fix_compose_yaml.sh  fix_crd_7_10.sh  (+50 more)
(+41 files in other folders)
