[package]
name = "credit-engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
uint = "0.9"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", default-features = false }

# (removed) golden_runner bin block
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"


["rlib"]


[lib]
name = "credit_engine_core"
path = "src/lib.rs"
crate-type = ["rlib"]
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
